// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a listen-of post from an indiekit jam 1`] = `
"---
date: 2025-05-06T06:37:59.997Z
slug: jam-kind-of-blue
listen-of:
  type: cite
  url: https://en.wikipedia.org/wiki/Kind_of_Blue
  name: Kind of Blue
  author: Miles Davis
tags:
  - jam
---

🎵 Listening to [Kind of Blue](https://en.wikipedia.org/wiki/Kind_of_Blue) by Miles Davis.

This is one of my all time favorite jazz albums.

"
`;

exports[`should create a listen-of post from sparkles 1`] = `
"---
date: 2025-05-06T00:00:00.000Z
slug: jam-kind-of-blue
listen-of:
  type: cite
  name: Kind of Blue
  photo: https://is1-ssl.mzstatic.com/image/thumb/Music/7f/9f/d6/mzi.vtnaewef.jpg/100x100bb.jpg
  author: Miles Davis
  uid: itunes:collection:268443092
  url: https://album.link/us/i/268443092
  published: "1959"
tags:
  - jam
indiekit_excerpt: Listened to Kind of Blue by Miles Davis
---

🎵 Listening to [Kind of Blue](https://album.link/us/i/268443092) by Miles Davis.

This is of my favorite jazz albums of all time. My parents got it for me when I was a kid playing trumpet in the school band. Compared to some of the other music I listen to, this album feels restrained but no less powerful.

"
`;

exports[`should create a photo post 1`] = `
"---
date: 2023-11-09T10:10:00.000Z
eleventyExcludeFromCollections: true
eleventyExcludeFromCollectionsReason: draft
slug: noyzk
image: /assets/img/8pzun.jpg
image_alt: pumpkin bread on cutting board
indiekit_post-type: photo
---

Draft post

"
`;

exports[`should create a read-of post from sparkles 1`] = `
"---
date: 2025-03-31T00:00:00.000Z
eleventyExcludeFromCollections: true
eleventyExcludeFromCollectionsReason: draft
title: Finished Reading What My Bones Know by Stephanie Foo - ★★★★★
slug: read-what-my-bones-know
read-of:
  type: cite
  name: What My Bones Know
  photo: https://covers.openlibrary.org/b/id/13012344-M.jpg
  author: Stephanie Foo
  uid: olid:OL25473797W
  url: https://openlibrary.org/works/OL25473797W
rating: "5"
---

I was really impressed with this memoir. The author clearly has experience with great story telling from working radio stories. She uses that skill in this book to weave together the timeline of her own experience understanding how her body's complex PTSD works in response to childhood trauma. The book is about her experience, it's not a how-to, but it offered a look at how our understanding of mental health has changed from decades past until now. At the same time, it raises questions about how our current system is not efficient at treating mental health. I highly recommend this book for anyone in the foster care community or those working through childhood trauma.

"
`;

exports[`should fill in references from mastodon 1`] = `
"---
date: 2023-03-09T03:23:02Z
slug: sometimes-slack-is-fun
like-of: https://fediverse.nicknisi.com/@nicknisi/109991177881690708
references:
  - referenceIdUrl: https://fediverse.nicknisi.com/@nicknisi/109991177881690708
    url: https://fediverse.nicknisi.com/@nicknisi/109991177881690708
    type: entry
    author:
      type: card
      name: "Nick Nisi :nicknisi:"
      nickname: "@nicknisi@nicknisi.com"
      url: https://fediverse.nicknisi.com/@nicknisi
    content: |-
      Attached: 1 image

      Sometimes Slack is fun.
indiekit_post-type: like
---


"
`;

exports[`should ignore properties from Aaron's post 1`] = `
"---
date: 2023-04-28T06:39:26.637Z
eleventyExcludeFromCollections: true
eleventyExcludeFromCollectionsReason: draft
slug: aaron-lawyer
like-of: https://aaronparecki.com/2023/04/24/8/lawyer
references:
  - referenceIdUrl: https://aaronparecki.com/2023/04/24/8/lawyer
    url: https://aaronparecki.com/2023/04/24/8/lawyer
    type: entry
    published: 2023-04-24T14:12:20-07:00
    author:
      type: card
      url: https://aaronparecki.com/
      photo:
        - alt: Aaron Parecki
          url: https://aaronparecki.com/images/profile.jpg
      name: Aaron Parecki
    content: In retrospect, I probably didn't need to include "but I am not a
      lawyer" in an email to our lawyers
indiekit_post-type: like
---


"
`;

exports[`should modify the content from marty's post 1`] = `
"---
date: 2023-05-01T00:03:00.564Z
title: Go time time
slug: go-again-time
bookmark-of: https://martymcgui.re/2023/03/19/go-time/?utm_medium=rss&utm_source=rss
references:
  - referenceIdUrl: https://martymcgui.re/2023/03/19/go-time/?utm_medium=rss&utm_source=rss
    url: https://martymcgui.re/2023/03/19/go-time/
    name: Go Time
    type: entry
    published: 2023-03-19T13:14:22-0400
    author:
      type: card
      name: Marty McGuire
      url: https://martymcgui.re/
      photo:
        - alt: Marty McGuire
          url: https://martymcgui.re/images/logo.jpg
    content: >-
      This is one of those posts about a tech issue comes up from time to time
      for me that I find difficult to search for. Sorry (not sorry) if it is not
      helpful to anyone else!

        Too much context about my site building process

        

      My site is built with Hugo, a static site generator known for being quite
      fast, and with a powerful (and challenging) templating system.

      I use my site for lots of stuff, which sometimes means showing content
      from other sites in my posts. For example:

        
          Responses that…
indiekit_post-type: bookmark
---


"
`;

exports[`should process David's checkin 1`] = `
"---
date: 2023-04-28T06:46:25.459Z
eleventyExcludeFromCollections: true
eleventyExcludeFromCollectionsReason: draft
title: David's Checkin
slug: davids-checkin
bookmark-of: https://david.shanske.com/2022/11/12/5771/
references:
  - referenceIdUrl: https://david.shanske.com/2022/11/12/5771/
    url: https://david.shanske.com/2022/11/12/5771/
    post-type: checkin
    type: entry
    published: 2022-11-12T21:18:14-05:00
    author:
      type: card
      name: David Shanske
      url: https://david.shanske.com/
      photo: https://david.shanske.com/avatar/dshanske?s=42
indiekit_post-type: bookmark
---


"
`;

exports[`should process find the author in james' post 1`] = `
"---
date: 2023-04-29T06:00:13.378Z
eleventyExcludeFromCollections: true
eleventyExcludeFromCollectionsReason: draft
slug: abcd
like-of: https://jamesg.blog/2023/04/18/source-code-folder-names/
references:
  - referenceIdUrl: https://jamesg.blog/2023/04/18/source-code-folder-names/
    url: https://jamesg.blog/2023/04/18/source-code-folder-names/
    name: My source code root folder name
    type: entry
    published: 2023-04-18T00:00:00
    author:
      type: card
      name: James' Coffee Blog ☕
      url: https://jamesg.blog
    content: >-
      I like seeing what people call the root folder in which they store their
      source code. This is the folder where all — or a lot of — your projects
      are stored. In my case, my programming projects go in a folder called src.
      (Although I have a strange habit of nesting personal projects that are
      related to each other. I believe my source code files are in need of a
      spring clean.)

      That long parenthetical notwithstanding, I find the name src cool. It’s a
      short way of saying source code; apt, simple, eas…
indiekit_post-type: like
---


"
`;
